提供头部组件 路由分配

--- a/my-project/index.html
+++ b/my-project/index.html
@@ -8,7 +8,7 @@
     	<!-- 引入样式 -->
   </head>
   <body>  
-    <div id="header">
+    <div id="app">
     	
     </div>
     <!-- built files will be auto injected -->
