--- a/my-project/index.html
+++ b/my-project/index.html
@@ -8,8 +8,11 @@
     	<!-- 引入样式 -->
   </head>
   <body>  
-    <div id="app">
-    	
+    <div id="header">
+    	头部
+    </div>
+     <div id="content">
+    	 内容区
     </div>
     <!-- built files will be auto injected -->
   </body>
