--- a/my-project/index.html
+++ b/my-project/index.html
@@ -8,9 +8,7 @@
     	<!-- 引入样式 -->
   </head>
   <body>  
-    <div id="header">
-    	头部
-    </div>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
